force-app/main/default/objects/cgcloud__Promotion_Reward__c/cgcloud__Promotion_Reward__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of reward assigned to a reward group.</description>
    <label>Promotion Reward</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Reward Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>