force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Automatically_Granted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Automatically_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the rewards must be automatically granted.</description>
    <inlineHelpText>Define if the reward must be automatically granted.</inlineHelpText>
    <label>Automatically Granted</label>
    <type>Checkbox</type>
</CustomField>