force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Boolean_Value__c</fullName>
    <description>Value to compare against an output parameter.</description>
    <label>Boolean Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
                <label>True</label>
            </value>
            <value>
                <fullName>false</fullName>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>