force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Classification__c</fullName>
    <inlineHelpText>Defines the Classification of Tactic Products the Reward is applied to.</inlineHelpText>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Classification</valueSetName>
    </valueSet>
</CustomField>