force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Count_Products__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Count_Products__c</fullName>
    <description>Count of Promotion_Reward_Product__c records.</description>
    <label>Count Products</label>
    <summaryForeignKey>cgcloud__Promotion_Reward_Product__c.cgcloud__Promotion_Reward__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>