force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Free_Item__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Free_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines a reward as a free item relevant.</description>
    <label>Free Item</label>
    <type>Checkbox</type>
</CustomField>