force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Hurdle__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Hurdle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Hurdle. Define if a specific hurdle condition resolution must be done against rewards values.</description>
    <inlineHelpText>Defines if the specific hurdle condition resolution must be done against reward values.</inlineHelpText>
    <label>Hurdle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Promotion_Hurdle__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reward-Specific</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Promotion_Hurdle__c.cgcloud__Promotion_Reward_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Promotion_Reward_Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Promotion_Hurdle__c</referenceTo>
    <relationshipLabel>Promotion Rewards</relationshipLabel>
    <relationshipName>Promotion_Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>