force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Pricing_Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Condition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the pricing condition template.</description>
    <inlineHelpText>Only Pricing Condition Templates of type &apos;Rewards&apos; can be selected.</inlineHelpText>
    <label>Pricing Condition Template</label>
    <referenceTo>cgcloud__CP_Pricing_Condition_Template__c</referenceTo>
    <relationshipLabel>Promotion Rewards</relationshipLabel>
    <relationshipName>Promotion_Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>