force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Promotion_Reward_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Reward_Group__c</fullName>
    <description>Master-Detail to the Reward Group that the Reward belongs to.</description>
    <label>Reward Group</label>
    <referenceTo>cgcloud__Promotion_Reward_Group__c</referenceTo>
    <relationshipLabel>Rewards</relationshipLabel>
    <relationshipName>Promotion_Rewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>