force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reward_Type__c</fullName>
    <description>Defines the type of reward.</description>
    <label>Reward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SpecialBasePrice</fullName>
                <label>Special Base Price</label>
            </value>
            <value>
                <fullName>PercentageDiscount</fullName>
                <label>Percentage Discount</label>
            </value>
            <value>
                <fullName>AmountPerUnit</fullName>
                <label>Amount Per Unit</label>
            </value>
            <value>
                <fullName>FlatRate</fullName>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>FreeItem</fullName>
                <label>Free Item</label>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>