force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__SubGroup__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__SubGroup__c</fullName>
    <description>Defines the subgroup the rewards belongs to.</description>
    <inlineHelpText>Defines the subgroup the rewards belongs to (Rewards from same group are evaluated together).</inlineHelpText>
    <label>SubGroup</label>
    <length>30</length>
    <type>Text</type>
</CustomField>