force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Text_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Text_Value__c</fullName>
    <description>Value to compare against an output parameter.</description>
    <label>Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>