force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Title__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Title__c</fullName>
    <description>Localizable title of the Reward Group. Reference to the title based on the user specific language.</description>
    <formula>CASE($User.cgcloud__Language_Postfix__c,

&quot;Language1&quot;, cgcloud__Title_Language_1__c,

&quot;Language2&quot;, BLANKVALUE(cgcloud__Title_Language_2__c,cgcloud__Title_Language_1__c),

&quot;Language3&quot;, BLANKVALUE(cgcloud__Title_Language_3__c,cgcloud__Title_Language_1__c),

&quot;Language4&quot;, BLANKVALUE(cgcloud__Title_Language_4__c,cgcloud__Title_Language_1__c),

cgcloud__Title_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>