force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__Title_Language_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Title_Language_1__c</fullName>
    <description>Holds the title of language 1.</description>
    <label>Title Language 1</label>
    <length>72</length>
    <type>Text</type>
</CustomField>