force-app/main/default/objects/cgcloud__Promotion_Reward__c/fields/cgcloud__User_Exit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User_Exit__c</fullName>
    <description>Defines a Reward as a Special Reward.</description>
    <inlineHelpText>Condition value defined for special reward.</inlineHelpText>
    <label>User Exit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>