force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Check_For_Boolean_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_For_Boolean_Value</fullName>
    <active>true</active>
    <description>Boolean Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Boolean&apos;.</description>
    <errorConditionFormula>AND( 
NOT(ISPICKVAL(cgcloud__Boolean_Value__c, &apos;&apos;)),
NOT(ISBLANK(TEXT(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c))),
NOT(ISPICKVAL(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c, &apos;Boolean&apos;)))</errorConditionFormula>
    <errorMessage>Boolean Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Boolean&apos;.</errorMessage>
</ValidationRule>