force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Check_For_Numeric_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_For_Numeric_Value</fullName>
    <active>true</active>
    <description>Numeric Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Numeric&apos;.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(cgcloud__Numeric_Value__c )),
NOT(ISBLANK(TEXT(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c))), 
NOT(ISPICKVAL(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c, &apos;Numeric&apos;)))</errorConditionFormula>
    <errorMessage>Numeric Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Numeric&apos;.</errorMessage>
</ValidationRule>