force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Check_For_Text_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_For_Text_Value</fullName>
    <active>true</active>
    <description>Text Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Text&apos;.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(cgcloud__Text_Value__c)),
NOT(ISBLANK(TEXT(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c))), 
NOT(ISPICKVAL(cgcloud__Hurdle__r.cgcloud__Promotion_Hurdle_Expression__r.cgcloud__Expression_Result_Type__c, &apos;Text&apos;)))</errorConditionFormula>
    <errorMessage>Text Value can only be provided if the Result Type of the Promotion Expression on Promotion Hurdle is &apos;Text&apos;.</errorMessage>
</ValidationRule>