force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__default_value_cannot_be_decimal.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__default_value_cannot_be_decimal</fullName>
    <active>true</active>
    <description>Default Value can&apos;t be decimal if the Reward Type is Free Item.</description>
    <errorConditionFormula>AND(
          cgcloud__Free_Item__c = true,
          NOT(ISCHANGED(cgcloud__Free_Item__c )),
          MFLOOR(cgcloud__Default_Value__c) &lt;&gt; cgcloud__Default_Value__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Default_Value__c</errorDisplayField>
    <errorMessage>Default Value can&apos;t be decimal if the Reward Type is Free Item.</errorMessage>
</ValidationRule>