force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Free_Item_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Free_Item_cannot_be_changed</fullName>
    <active>true</active>
    <description>The Free Item can&apos;t be edited after Promotion Reward creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(cgcloud__Free_Item__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Free_Item__c</errorDisplayField>
    <errorMessage>The Free Item can&apos;t be edited after Promotion Reward creation.</errorMessage>
</ValidationRule>