force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Hurdle_with_PER.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Hurdle_with_PER</fullName>
    <active>true</active>
    <description>Only promotion hurdles with &apos;PER&apos; Operator can be selected if the Free Item is checked.</description>
    <errorConditionFormula>AND(
cgcloud__Free_Item__c = false,
NOT(ISBLANK(cgcloud__Hurdle__c)), 
ISPICKVAL(cgcloud__Hurdle__r.cgcloud__Operator__c, &apos;PER&apos;))</errorConditionFormula>
    <errorMessage>Only promotion hurdles with &apos;PER&apos; Operator can be selected if the Free Item is checked.</errorMessage>
</ValidationRule>