force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__pricing_condition_tem_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__pricing_condition_tem_cannot_be_changed</fullName>
    <active>true</active>
    <description>The Pricing Condition Template cannot be edited after creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( cgcloud__Pricing_Condition_Template__c ))</errorConditionFormula>
    <errorDisplayField>cgcloud__Pricing_Condition_Template__c</errorDisplayField>
    <errorMessage>The Pricing Condition Template can&apos;t be edited after Promotion Reward creation.</errorMessage>
</ValidationRule>