force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__reward_type_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__reward_type_cannot_be_modified</fullName>
    <active>true</active>
    <description>The Reward Type can&apos;t be edited after Promotion Reward creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( cgcloud__Reward_Type__c))</errorConditionFormula>
    <errorDisplayField>cgcloud__Reward_Type__c</errorDisplayField>
    <errorMessage>The Reward Type can&apos;t be edited after Promotion Reward creation.</errorMessage>
</ValidationRule>