force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__Sort_must_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sort_must_be_greater_than_0</fullName>
    <active>true</active>
    <description>The Sort must be a number greater than 0.</description>
    <errorConditionFormula>cgcloud__Sort__c &lt;= 0</errorConditionFormula>
    <errorMessage>The Sort must be a number greater than 0.</errorMessage>
</ValidationRule>