force-app/main/default/objects/cgcloud__Promotion_Reward__c/validationRules/cgcloud__User_Exit_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__User_Exit_cannot_be_changed</fullName>
    <active>true</active>
    <description>The User Exit can&apos;t be edited after Promotion Reward creation.</description>
    <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED(  cgcloud__User_Exit__c ))</errorConditionFormula>
    <errorDisplayField>cgcloud__User_Exit__c</errorDisplayField>
    <errorMessage>The User Exit can&apos;t be edited after Promotion Reward creation.</errorMessage>
</ValidationRule>